this is real first commite

--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                                                     designer</abbr></small></h6>
                                         <p><small>October 2023</small></p>
 
-                                        <p class="mb-0">When you search for free CSS templates, you will notice that
-                                            TemplateMo is one of the best websites.</p>
+                                        <p class="mb-0">Computer siences are my faivorite </p>
                                     </div>
 
                                     <span class="badge bg-design rounded-pill ms-auto">14</span>
