--- a/index.html
+++ b/index.html
@@ -263,12 +263,12 @@
 
                                     <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                         <div class="custom-block bg-white shadow-lg">
-                                            <a href="topics-detail.html">
+                                            <a href="piano.html">
                                                 <div class="d-flex">
                                                     <div>
-                                                        <h5 class="mb-2">Graphic</h5>
+                                                        <h5 class="mb-2">Piano Keyboard</h5>
 
-                                                        <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                        <p class="mb-0">Using some code from the other source, but I integrated it in my way</p>
                                                     </div>
 
                                                     <span class="badge bg-design rounded-pill ms-auto">75</span>
