--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
                                     <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                         <div class="custom-block bg-white shadow-lg">
-                                            <a href="piano/piano.html">
+                                            <a href="piano.html">
                                                 <div class="d-flex">
                                                     <div>
                                                         <h5 class="mb-2">Piano Keyboard</h5>
