first good run of piano

--- a/piano.html
+++ b/piano.html
@@ -19,7 +19,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <link href="css/bootstrap-icons.css" rel="stylesheet">
-
+        <link href="css/piano.css" rel="stylesheet" type="text/css">
         <link href="css/templatemo-topic-listing.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="js/audiosynth.js"></script>
