--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
                                                     <div>
                                                         <h5 class="mb-2">Piano Keyboard</h5>
 
-                                                        <p class="mb-0">Using some code from the other source, but I integrated it in my way</p>
+                                                        <p class="mb-0">I tried to integrate this code for testing all options and possibilities for Audio Synth API, for me during the process it was so fun</p>
                                                     </div>
 
                                                     <span class="badge bg-design rounded-pill ms-auto">75</span>
                                                 </div>
 
-                                                <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png"
+                                                <img src="images/tm_piano.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
