--- a/index.html
+++ b/index.html
@@ -244,18 +244,18 @@
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                         <div class="custom-block bg-white shadow-lg">
-                                            <a href="topics-detail.html">
+                                            <a href="esploter.html">
                                                 <div class="d-flex">
                                                     <div>
-                                                        <h5 class="mb-2">Web Design</h5>
+                                                        <h5 class="mb-2">ES Ploter</h5>
 
-                                                        <p class="mb-0">Topic Listing Template based on Bootstrap 5</p>
+                                                        <p class="mb-0">Drawing and analyzing mathematical functions. Algebra, trigonometry and parametric multivariate functions</p>
                                                     </div>
 
                                                     <span class="badge bg-design rounded-pill ms-auto">14</span>
                                                 </div>
 
-                                                <img src="images/topics/undraw_Remote_design_team_re_urdx.png"
+                                                <img class="rounded float-end" src="images/tm_esplot.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
@@ -274,7 +274,7 @@
                                                     <span class="badge bg-design rounded-pill ms-auto">75</span>
                                                 </div>
 
-                                                <img src="images/tm_piano.jpg"
+                                                <img class="rounded float-end" src="images/tm_piano.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
@@ -317,7 +317,7 @@
                                                     <span class="badge bg-advertising rounded-pill ms-auto">30</span>
                                                 </div>
 
-                                                <img src="images/topics/undraw_online_ad_re_ol62.png"
+                                                <img class="rounded" src="images/topics/undraw_online_ad_re_ol62.png"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
