--- a/esrealtime.html
+++ b/esrealtime.html
@@ -135,6 +135,12 @@
                             </div>
                             
                         </div>
+                        <div class="interlvl5">
+                            <button id="startbtn" class="btn btn-warning" onclick="stopStream()">Stop and analysis existing data</button>
+                        </div>
+
+                    </div>
+                    <div class="row">
                         
 
                     </div>
