--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                                     <span class="badge bg-design rounded-pill ms-auto">100</span>
                                                 </div>
 
-                                                <img src="images/topics/colleagues-working-cozy-office-medium-shot.png"
+                                                <img src="images/tm_esrealtime.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
