--- a/index.html
+++ b/index.html
@@ -328,13 +328,13 @@
                                                     <div>
                                                         <h5 class="mb-2">Image Processing</h5>
 
-                                                        <p class="mb-0">Colors and Art</p>
+                                                        <p class="mb-0">Implementation of the encryption algorithm of my own design, inside the bytes of an image</p>
                                                     </div>
 
                                                     <span class="badge bg-advertising rounded-pill ms-auto">30</span>
                                                 </div>
 
-                                                <img class="rounded" src="images/tm_esrealtime.jpg"
+                                                <img class="rounded" src="images/tm_esimgpr.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
