--- a/esmem.html
+++ b/esmem.html
@@ -123,7 +123,7 @@
                     <div class="row">
                         <div class="inttvv">
 
-                            <div class="esmemlvl">
+                            <div id="esmemlvl">
 
                             </div>
                             <h5 id="urscore">Score:</h5>
