--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                                                     designer</abbr></small></h6>
                                         <p><small>October 2023</small></p>
 
-                                        <p class="mb-0">Computer siences are my faivorite </p>
+                                        <p class="mb-0">Why do I always think that I still don't know anything and the more I try, the more I don't know? </p>
                                     </div>
 
                                     <span class="badge bg-design rounded-pill ms-auto">14</span>
                                 </div>
 
-                                <img src="images/topics/undraw_Remote_design_team_re_urdx.png"
-                                    class="custom-block-image img-fluid" alt="">
+                                <img src="images/ee.png"
+                                    class="rounded" style="width: inherit;" alt="">
                             </a>
                         </div>
                     </div>
@@ -263,10 +263,10 @@
                                                         </p>
                                                     </div>
 
-                                                    <span class="badge bg-design rounded-pill ms-auto">14</span>
+                                                    <span class="badge bg-design rounded-pill ms-auto">90%</span>
                                                 </div>
 
-                                                <img class="rounded float-end" src="images/tm_esplot.jpg"
+                                                <img src="images/tm_esplot.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
@@ -284,10 +284,10 @@
                                                             the process it was so fun</p>
                                                     </div>
 
-                                                    <span class="badge bg-design rounded-pill ms-auto">75</span>
+                                                    <span class="badge bg-design rounded-pill ms-auto">72%</span>
                                                 </div>
 
-                                                <img class="rounded float-end" src="images/tm_piano.jpg"
+                                                <img src="images/tm_piano.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
@@ -301,10 +301,10 @@
                                                         <h5 class="mb-2">Realtime Data analysis </h5>
 
                                                         <p class="mb-0">These codes show up the ability of realtime
-                                                            analysis by JavaScript.</p>
+                                                            analysis by JavaScript. Using one of the best smart charts</p>
                                                     </div>
 
-                                                    <span class="badge bg-design rounded-pill ms-auto">100</span>
+                                                    <span class="badge bg-design rounded-pill ms-auto">95%</span>
                                                 </div>
 
                                                 <img src="images/tm_esrealtime.jpg" class="custom-block-image img-fluid"
@@ -331,10 +331,10 @@
                                                         <p class="mb-0">Implementation of the encryption algorithm of my own design, inside the bytes of an image</p>
                                                     </div>
 
-                                                    <span class="badge bg-advertising rounded-pill ms-auto">30</span>
+                                                    <span class="badge bg-advertising rounded-pill ms-auto">100%</span>
                                                 </div>
 
-                                                <img class="rounded" src="images/tm_esimgpr.jpg"
+                                                <img src="images/tm_esimgpr.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
@@ -347,13 +347,13 @@
                                                     <div>
                                                         <h5 class="mb-2">Memory Game</h5>
 
-                                                        <p class="mb-0">This page is built to keep me fast and ...</p>
+                                                        <p class="mb-0">One of the projects designed to improve the level of programming with JavaScript and HTML CSS. With minimal code size</p>
                                                     </div>
 
-                                                    <span class="badge bg-advertising rounded-pill ms-auto">65</span>
+                                                    <span class="badge bg-advertising rounded-pill ms-auto">99%</span>
                                                 </div>
 
-                                                <img src="images/topics/undraw_Group_video_re_btu7.png"
+                                                <img src="images/tm_esmem.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
@@ -364,7 +364,7 @@
                                             <a href="topics-detail.html">
                                                 <div class="d-flex">
                                                     <div>
-                                                        <h5 class="mb-2">Viral Tweet</h5>
+                                                        <h5 class="mb-2">Math and Painting</h5>
 
                                                         <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
                                                     </div>
