--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+
 <html lang="en">
 
 <head>
@@ -361,7 +361,7 @@
 
                                     <div class="col-lg-4 col-md-6 col-12">
                                         <div class="custom-block bg-white shadow-lg">
-                                            <a href="topics-detail.html">
+                                            <a href="esmp.html">
                                                 <div class="d-flex">
                                                     <div>
                                                         <h5 class="mb-2">Math and Painting</h5>
