--- a/esmp.html
+++ b/esmp.html
@@ -125,14 +125,16 @@
                             
                             <div id="mytoolbid" class="mytoolb">
                                 <button id="bt1" name="btnm" class="mybtn"><i class="fa fa-pencil"></i></button>
-                                <button id="bt2" name="btnm" class="mybtn"><i class="fa fa-paint-brush"></i></button>
-                                <button id="bt3" name="btnm" class="mybtn"><i class="fa fa-trash"></i></button>
-                                <button id="bt4" name="btnm" class="mybtn"><i class="fa fa-close"></i></button>
-                                <button id="bt5" name="btnm" class="mybtn"><i class="fa fa-folder"></i></button>
+                                <button id="bt2" name="btnm" class="mybtn"><i class="fa fa-pencil"></i></button>
+                                <button id="bt3" name="btnm" class="mybtn"><i class="fa fa-paint-brush"></i></button>
+                                <button id="bt4" name="btnm" class="mybtn"><i class="fa fa-paint-brush"></i></button>
+                                <button id="bt5" name="btnm" class="mybtn"><i class="fa fa-snowflake-o"></i></button>
+                                <button id="bt6" name="btnm" class="mybtn"><i class="fa fa-trash"></i></button>
+                                <button id="bt7" name="btnm" class="mybtn"><i class="fa fa-folder"></i></button>
                                 <div class="interlvl1">
                                     <p class="esplotlabelcolorslight2">Current</p>
                                     <input type="color" class="form-control form-control-color" id="escolor"
-                                        value="#0F0601" onchange="chngcanvascolor()">
+                                        value="#700170" onchange="chngcanvascolor()">
                                 </div>
                             </div>
                             <canvas class="canvascl" id="esmpcan" width="1000" height="600"></canvas>
@@ -140,7 +142,10 @@
                             <p id="exporttxt"></p>
                             <img id="pen1" src="images/pen1.png" style="display: none;" alt="">
                             <img id="pen2" src="images/pen2.png" style="display: none;" alt="">
+                            <img id="pen11" src="images/pen11.png" style="display: none;" alt="">
+                            <img id="pen22" src="images/pen22.png" style="display: none;" alt="">
                             <img id="brush1" src="images/brush1.png" style="display: none;" alt="">
+                            <img id="RASP" src="images/RASP.png" style="display: none;" alt="">
                         </div>
                         
                     </div>
