--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                                                     <span class="badge bg-advertising rounded-pill ms-auto">50</span>
                                                 </div>
 
-                                                <img src="images/topics/undraw_viral_tweet_gndb.png"
+                                                <img src="images/tm-esmp.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
