--- a/piano.html
+++ b/piano.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Topic Detail Page</title>
+        <title>Ehsan A.G. Portfolio projects - ES Piano</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -99,11 +99,11 @@
 
                                     <li class="breadcrumb-item"><a href="index.html">Javascript</a></li>
 
-                                    <li class="breadcrumb-item active" aria-current="page">Piano Project</li>
+                                    <li class="breadcrumb-item active" aria-current="page">ES Piano</li>
                                 </ol>
                             </nav>
 
-                            <h4 class="text-white">Javascript Piano with all possible configs</h4>
+                            <h6 class="text-white">Javascript Piano with all possible configs</h6>
 
                             <div class="d-flex align-items-center mt-5">
                                 <a href="https://github.com/eag-ehsan/MyPortfolio.git" class="btn custom-btn custom-border-btn smoothscroll me-1">Source in github</a>
