--- a/esploter.html
+++ b/esploter.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Topic Detail Page</title>
+    <title>Ehsan A.G. Portfolio projects - ES Ploter</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
