--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Topic Listing Bootstrap 5 Template</title>
+    <title>Ehsan A.G. Portfolio projects</title>
     <!-- #endregion -->
 
     <!-- #region CSS Links-->
@@ -221,7 +221,7 @@
                         <li class="nav-item" role="presentation">
                             <button class="nav-link" id="finance-tab" data-bs-toggle="tab"
                                 data-bs-target="#finance-tab-pane" type="button" role="tab"
-                                aria-controls="finance-tab-pane" aria-selected="false">Python</button>
+                                aria-controls="finance-tab-pane" aria-selected="false">My templates</button>
                         </li>
 
                         <li class="nav-item" role="presentation">
@@ -277,7 +277,7 @@
                                             <a href="piano.html">
                                                 <div class="d-flex">
                                                     <div>
-                                                        <h5 class="mb-2">Piano Keyboard</h5>
+                                                        <h5 class="mb-2">ES Piano</h5>
 
                                                         <p class="mb-0">I tried to integrate this code for testing all
                                                             options and possibilities for Audio Synth API, for me during
@@ -326,7 +326,7 @@
                                             <a href="esimgpr.html">
                                                 <div class="d-flex">
                                                     <div>
-                                                        <h5 class="mb-2">Image Processing</h5>
+                                                        <h5 class="mb-2">Data encryption</h5>
 
                                                         <p class="mb-0">Implementation of the encryption algorithm of my own design, inside the bytes of an image</p>
                                                     </div>
@@ -381,16 +381,16 @@
                             </div>
                             <!-- #endregion -->
 
-                            <!-- #region Python-->
+                            <!-- #region My templates-->
                             <div class="tab-pane fade" id="finance-tab-pane" role="tabpanel"
                                 aria-labelledby="finance-tab" tabindex="0">
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12 mb-4 mb-lg-0">
                                         <div class="custom-block bg-white shadow-lg">
-                                            <a href="topics-detail.html">
+                                            <a href="estemplate1.html">
                                                 <div class="d-flex">
                                                     <div>
-                                                        <h5 class="mb-2">Investment</h5>
+                                                        <h5 class="mb-2">ES Templates: Hony beez</h5>
 
                                                         <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
                                                     </div>
