--- a/esmp.html
+++ b/esmp.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Topic Detail Page</title>
+        <title>Ehsan A.G. Portfolio projects - Math and Painting</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -97,13 +97,13 @@
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="index.html">Portfolio Projects</a></li>
 
-                                    <li class="breadcrumb-item"><a href="index.html">Javascript</a></li>
+                                    <li class="breadcrumb-item"><a href="index.html">Web Based Projects</a></li>
 
-                                    <li class="breadcrumb-item active" aria-current="page">Realtime Data analysis</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Math and Painting</li>
                                 </ol>
                             </nav>
 
-                            <h4 class="text-white">How to speed up JavaScript code with realtime data entry</h4>
+                            <h4 class="text-white">Paint homolographical shapes with special mathematic equations</h4>
 
                             <div class="d-flex align-items-center mt-5">
                                 <a href="https://github.com/eag-ehsan/MyPortfolio.git" class="btn custom-btn custom-border-btn smoothscroll me-1">Source in github</a>
