--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                             <a href="esmem.html">
                                                 <div class="d-flex">
                                                     <div>
-                                                        <h5 class="mb-2">Memory Game</h5>
+                                                        <h5 class="mb-2">ES Memory Game</h5>
 
                                                         <p class="mb-0">One of the projects designed to improve the level of programming with JavaScript and HTML CSS. With minimal code size</p>
                                                     </div>
@@ -366,7 +366,7 @@
                                                     <div>
                                                         <h5 class="mb-2">Math and Painting</h5>
 
-                                                        <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                        <p class="mb-0">Paint homolographical shapes with special mathematic equations, without using any external component</p>
                                                     </div>
 
                                                     <span class="badge bg-advertising rounded-pill ms-auto">50</span>
