--- a/estemplate1/index.html
+++ b/estemplate1/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Topic Listing Bootstrap 5 Template</title>
+    <title>Ehsan A.G. Portfolio projects - ES Template1</title>
     <!-- #endregion -->
 
     <!-- #region CSS Links-->
@@ -19,7 +19,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap"
         rel="stylesheet">
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="css/estemplate1.css" rel="stylesheet">
     <!-- #endregion -->
 
@@ -27,11 +27,12 @@
 
 <body id="top">
  
-      <!-- #region JAVASCRIPT FILES-->
-    
-    <script src="js/estemplate1.js"></script>
-    <!-- #endregion -->
+
+    <div id="esmain">
+
+    </div>
 
 </body>
+<script src="js/estemplate1.js"></script>
 
 </html>
