--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12 mb-4 mb-lg-0">
                                         <div class="custom-block bg-white shadow-lg">
-                                            <a href="estemplate1.html">
+                                            <a href="estemplate1/index.html">
                                                 <div class="d-flex">
                                                     <div>
                                                         <h5 class="mb-2">ES Templates: Hony beez</h5>
