--- a/esploter.html
+++ b/esploter.html
@@ -94,7 +94,7 @@
             <div class="container">
                 <div class="row justify-content-md-start align-items-md-start">
 
-                    <div class="col-sm-5 col-12 mb-5">
+                    <div class="col-lg-9 col-12 mb-5">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Portfolio Projects</a></li>
@@ -105,14 +105,17 @@
                             </ol>
                         </nav>
 
-                        <h5 class="text-white">ES Plot - Auto Scale drawing mathematic equations </h5>
+                        <div class="row">
+                            <h6 class="text-white col-lg-7">ES Plot - Auto Scale drawing mathematic equations </h6>
 
-                        <div class="d-flex align-items-center mt-5">
-                            <a href="https://github.com/eag-ehsan/MyPortfolio.git"
-                                class="btn custom-btn custom-border-btn smoothscroll me-1">Source in github</a>
+                            <div class="d-flex align-items-center mt-2 col-lg-5">
+                                <a href="https://github.com/eag-ehsan/MyPortfolio.git" class="btn custom-btn custom-border-btn smoothscroll me-1">Source in github</a>
 
+                                
+                            </div>
 
                         </div>
+
                     </div>
 
 
