--- a/estemplate1/index.html
+++ b/estemplate1/index.html
@@ -20,8 +20,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap"
         rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link href="css/estemplate1.css" rel="stylesheet">
+    
+
+        
     <!-- #endregion -->
+    <style id="styleFillFromCode">
+
+    </style>
 
 </head>
 
