--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@
                                                     <div>
                                                         <h5 class="mb-2">ES Templates: Hony beez</h5>
 
-                                                        <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                        <p class="mb-0">CSSs are completely dynamic and I have very special design of webpage</p>
                                                     </div>
 
                                                     <span class="badge bg-finance rounded-pill ms-auto">30</span>
                                                 </div>
 
-                                                <img src="images/topics/undraw_Finance_re_gnv2.png"
+                                                <img src="images/tm_tmpl.jpg"
                                                     class="custom-block-image img-fluid" alt="">
                                             </a>
                                         </div>
