--- a/estemplate1/index.html
+++ b/estemplate1/index.html
@@ -41,7 +41,9 @@
         .rotate
         {
             z-index: 999;
-            -webkit-transform: scale(1.5) rotate(360deg);
+            transition-duration: 2s;
+            transition-property: rgb(134, 0, 116);
+            -webkit-transform: scale(1.5) rotate(360deg) ;
             -webkit-transition: -webkit-transform 1s;
         }
     </style>
