--- a/estemplate1/estmpl1alpha.html
+++ b/estemplate1/estmpl1alpha.html
@@ -50,6 +50,6 @@
     <div id="esmain"></div>
 
 </body>
-<script src="js/estmpl1Base.js"></script>
+<script src="js/estmpl1alpha.js"></script>
 
 </html>
