--- a/estemplate1/estmpl1alpha.html
+++ b/estemplate1/estmpl1alpha.html
@@ -32,7 +32,7 @@
 
     <div class="topframe">
         <h1>Alpha usage </h1>
-      
+        <button onclick="applychanges()" style="margin-left: 5px;">Apply</button>
         
         <div style="display: none;">
             <label for="fname">number Of Hexagons On Width:</label>
