--- a/index.html
+++ b/index.html
@@ -412,11 +412,9 @@
 
                                                 <div class="custom-block-overlay-text d-flex">
                                                     <div>
-                                                        <h5 class="text-white mb-2">Finance</h5>
+                                                        <h5 class="text-white mb-2">My String Art Algorithm</h5>
 
-                                                        <p class="text-white">Lorem ipsum dolor, sit amet consectetur
-                                                            adipisicing elit. Sint animi necessitatibus aperiam
-                                                            repudiandae nam omnis</p>
+                                                        <p class="text-white">I designed a proprietary algorithm in my own way to convert black and white images into a single thread matrix.My JavaScript implementation of this algorithm is available here.</p>
 
                                                         <a href="topics-detail.html"
                                                             class="btn custom-btn mt-2 mt-lg-3">Learn More</a>
