--- a/index.html
+++ b/index.html
@@ -151,21 +151,19 @@
                             <div class="d-flex flex-column h-100">
                                 <img src="images/businesswoman-using-tablet-analysis.jpg"
                                     class="custom-block-image img-fluid" alt="">
-
+                                <a href="esArtString/index.html">
                                 <div class="custom-block-overlay-text d-flex">
                                     <div>
-                                        <h5 class="text-white mb-2">Finance</h5>
+                                        <h5 class="text-white mb-2">ES String Art Algorithm</h5>
 
-                                        <p class="text-white">Topic Listing Template includes homepage, listing page,
-                                            detail page, and contact page. You can feel free to edit and adapt for your
-                                            CMS requirements.</p>
+                                        <p class="text-white">I designed a proprietary algorithm in my own way to convert black and white images into a single thread matrix.My JavaScript implementation of this algorithm is available here.</p>
 
-                                        <a href="topics-detail.html" class="btn custom-btn mt-2 mt-lg-3">Learn More</a>
+                                        <a href="esArtString/index.html" class="btn custom-btn mt-2 mt-lg-3">Learn More</a>
                                     </div>
 
                                     <span class="badge bg-finance rounded-pill ms-auto">25</span>
                                 </div>
-
+                                </a>
                                 <div class="social-share d-flex">
                                     <p class="text-white me-4">Share:</p>
 
@@ -416,7 +414,7 @@
 
                                                         <p class="text-white">I designed a proprietary algorithm in my own way to convert black and white images into a single thread matrix.My JavaScript implementation of this algorithm is available here.</p>
 
-                                                        <a href="topics-detail.html"
+                                                        <a href="esArtString/index.html"
                                                             class="btn custom-btn mt-2 mt-lg-3">Learn More</a>
                                                     </div>
 
