--- a/esArtString/index.html
+++ b/esArtString/index.html
@@ -41,7 +41,7 @@
                         Open another image <input type="file" id="fileInput" style="display: none;">
                     </label>
                 </div>
-                <img id="imgid1" alt="" onload="imgonload()" src="a2.jpg" style="display: none;"/>
+                <img id="imgid1" alt="" src="a4.jpg" style="display: none;"/>
                 <canvas class="canvas1" id="canvas1id" width="500" height="500"></canvas>
                 
             </div>
