--- a/esArtString/index.html
+++ b/esArtString/index.html
@@ -58,6 +58,8 @@
                 <div id="imgmatrixid" class="intcard3">
 
                 </div>
+                <p id="esStatus"></p>
+                <p id="esPercent"></p>
                 <textarea id="goodjob" rows="10" cols="100"></textarea>
             </div>
 
