--- a/esArtString/index.html
+++ b/esArtString/index.html
@@ -41,7 +41,7 @@
                         Open another image <input type="file" id="fileInput" style="display: none;">
                     </label>
                 </div>
-                <img id="imgid1" alt="" src="a4.jpg" style="display: none;"/>
+                <img id="imgid1" alt="" src="a9.png" style="display: none;"/>
                 <canvas class="canvas1" id="canvas1id" width="500" height="500"></canvas>
                 
             </div>
@@ -71,7 +71,7 @@
                 <button class="esBtn" onclick="es_draw_lines()">start Draw Lines</button>         
             </div>
             <div id="esDrawlines_div2" class="intcard3">
-                <canvas class="canvas1" id="esDrawlines_canvas1" width="500" height="500"></canvas>
+                <canvas class="canvas1" id="esDrawlines_canvas1" width="1000" height="1000"></canvas>
 
             </div>
             <p id="esDrawlines_p2"></p>
